Update .lpi files for Ultibo examples to fix an access violation in Lazarus

--- a/Samples/FreePascal/Ultibo/Combustion/Combustion.lpi
+++ b/Samples/FreePascal/Ultibo/Combustion/Combustion.lpi
@@ -4,14 +4,16 @@
     <Version Value="9"/>
     <PathDelim Value="\"/>
     <General>
+      <Flags>
+        <MainUnitHasCreateFormStatements Value="False"/>
+        <MainUnitHasTitleStatement Value="False"/>
+        <Runnable Value="False"/>
+      </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
       <Title Value="Combustion"/>
+      <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
-      <UseXPManifest Value="True"/>
-      <XPManifest>
-        <DpiAware Value="True"/>
-      </XPManifest>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
