--- a/Samples/FreePascal/Ultibo/DisplayFB/DisplayFB.lpi
+++ b/Samples/FreePascal/Ultibo/DisplayFB/DisplayFB.lpi
@@ -6,6 +6,8 @@
     <General>
       <Flags>
         <MainUnitHasCreateFormStatements Value="False"/>
+        <MainUnitHasTitleStatement Value="False"/>
+        <Runnable Value="False"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
