--- a/Samples/FreePascal/Ultibo/Blinky/Blinky.lpi
+++ b/Samples/FreePascal/Ultibo/Blinky/Blinky.lpi
@@ -4,7 +4,9 @@
     <Version Value="9"/>
     <General>
       <Flags>
-        <LRSInOutputDirectory Value="False"/>
+        <MainUnitHasCreateFormStatements Value="False"/>
+        <MainUnitHasTitleStatement Value="False"/>
+        <Runnable Value="False"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
